# benchmark_electron

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  build.yml
apps/cpu_intensive/: README.md  package.json
apps/cpu_intensive/src/: index.css  index.html  index.js  preload.js  site.js  worker.js
apps/file_transfer/: package.json
apps/file_transfer/src/: index.html  index.js  preload.js
apps/hello_world/: package.json
apps/hello_world/src/: index.html  index.js
bench/: main.rs  utils.rs
bench/tools/src/: build_benchmark_jsons.rs
hello_world/src/: index.js
